--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,8 +12,8 @@
     "sequelize": "^6.37.3"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon -r dotenv/config server.js dotenv_config_path=.env",
+    "start": "node index.js",
+    "dev": "nodemon -r dotenv/config index.js dotenv_config_path=.env",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
