--- a/Backend-fiver/package.json
+++ b/Backend-fiver/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@google/generative-ai": "^0.19.0",
     "@omar-sarfraz/caesar-cipher": "^2.0.1",
     "@supabase/supabase-js": "^2.45.4",
     "bcrypt": "^5.1.1",
@@ -8,10 +9,12 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.12.0",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "socket.io": "^4.7.5"
   },
   "scripts": {
     "start": "node index.js",
