--- a/fiver/package.json
+++ b/fiver/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@material-ui/core": "^4.12.4",
@@ -16,20 +17,35 @@
     "@mui/material": "^6.1.0",
     "@mui/styles": "^6.1.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.5.0",
+    "@supabase/supabase-js": "^2.45.4",
+    "@types/quill": "^2.0.14",
     "antd": "^5.20.6",
     "axios": "^1.7.7",
+    "chart.js": "^3.9.1",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "next": "14.2.10",
+    "quill": "^2.0.2",
     "react": "^18",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "react-loading-icons": "^1.1.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.7.5",
+    "stripe": "^16.12.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/stripe-v3": "^3.1.33",
     "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.10",
